# chessie

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
engine_cpp/: .clang-tidy  CMakeLists.txt  CMakePresets.json
engine_cpp/bindings/: pybind_module.cpp
engine_cpp/include/chessie/: bitboard.hpp  board.hpp  engine.hpp  evaluation.hpp  magic.hpp  move.hpp  movegen.hpp  piece.hpp  position.hpp  search.hpp  tt.hpp  types.hpp  zobrist.hpp
engine_cpp/src/: board.cpp  engine.cpp  evaluation.cpp  magic.cpp  movegen.cpp  position.cpp  search.cpp  tt.cpp
engine_cpp/tests/: CMakeLists.txt  test_bitboard.cpp  test_board.cpp  test_evaluation.cpp  test_magic.cpp  test_move.cpp  test_movegen.cpp  test_perft.cpp  test_piece.cpp  test_position.cpp  test_search.cpp  test_tt.cpp  test_types.cpp  test_zobrist.cpp
src/chessie/: __init__.py  app.py  runtime_assets.py
src/chessie/analysis/: __init__.py  models.py  service.py
src/chessie/core/: __init__.py  bitboard.py  board.py  enums.py  move.py  move_generator.py  notation.py  piece.py  position.py  rules.py  types.py  zobrist.py
src/chessie/core/notation/: __init__.py  fen.py  models.py  pgn.py  san.py
src/chessie/engine/: __init__.py  _default.py  cpp_search.py  python_search.py  python_search_eval.py  python_search_ordering.py  python_search_types.py  qt_bridge.py  search.py
src/chessie/game/: __init__.py  clock.py  controller.py  interfaces.py  player.py  state.py
src/chessie/ui/: analysis_session.py  bootstrap.py  engine_session.py  game_sync.py  i18n.py  main_window.py  pgn_io.py  resources.py  sounds.py
src/chessie/ui/board/: board_scene.py  board_scene_animation.py  board_scene_interaction.py  board_scene_render.py  board_view.py  piece_item.py
src/chessie/ui/dialogs/: analysis_dialog.py  manual_dialog.py  new_game_dialog.py  promotion_dialog.py  settings_dialog.py
src/chessie/ui/dialogs/manual/: __init__.py  book_browser.py  dialog.py  fen_renderer.py  models.py
src/chessie/ui/dialogs/manual/chapters/: __init__.py  _base.py  ch01_introduction.py  ch02_pieces.py  ch03_special_moves.py  ch04_notation.py  ch05_tactics.py  ch06_openings.py  ch07_endgame.py
src/chessie/ui/dialogs/settings/: __init__.py  dialog.py  models.py  pages.py  previews.py
src/chessie/ui/main_window_parts/: __init__.py  analysis.py  game.py  lifecycle.py  pgn.py  settings.py  ui.py
src/chessie/ui/panels/: analysis_panel.py  clock_widget.py  control_panel.py  eval_bar.py  eval_graph.py  move_panel.py
src/chessie/ui/styles/: theme.py
src/chessy/: __init__.py  app.py
src/chessy/core/: __init__.py  board.py  enums.py  move.py  move_generator.py  notation.py  piece.py  position.py  rules.py  types.py
src/chessy/game/: __init__.py  clock.py  controller.py  interfaces.py  player.py  state.py
src/chessy/ui/: main_window.py  resources.py
src/chessy/ui/board/: board_scene.py  board_view.py  piece_item.py
src/chessy/ui/dialogs/: new_game_dialog.py  promotion_dialog.py
src/chessy/ui/panels/: clock_widget.py  control_panel.py  eval_bar.py  move_panel.py
src/chessy/ui/styles/: theme.py
tests/: conftest.py
tests/analysis/: test_service.py
tests/core/: test_bitboard.py  test_board.py  test_move_generator.py  test_notation.py  test_position.py  test_rules.py
tests/engine/: test_cpp_search.py  test_cpp_search_compat.py  test_qt_bridge.py  test_search.py
tests/game/: test_clock.py  test_controller.py  test_player.py  test_state.py
tests/ui/: test_analysis_session.py  test_board_scene.py  test_clock_widget.py  test_engine_session.py  test_main_window.py  test_main_window_analysis.py  test_main_window_draw.py  test_main_window_history_jump.py  test_main_window_menu.py  test_main_window_pgn.py  test_main_window_undo.py  test_manual_content.py  test_move_panel.py  test_settings_apply.py  test_settings_dialog.py
