[project]
name = "chessie"
version = "0.1.0"
description = "Desktop chess application with AI engine and game analyzer"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
dependencies = ["PyQt6>=6.8"]

[project.scripts]
chessie = "chessie.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chessie"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = ["pytest>=8.3", "pytest-cov>=6.0"]
